feat: Finished project configuration

--- a/sandbox/index.html
+++ b/sandbox/index.html
@@ -7,12 +7,10 @@
     <title>2D Platformer</title>
 </head>
 <body>
-    <canvas id="game"></canvas>
+    <canvas id="game-canvas"></canvas>
 
-    <script src="../dist/platformer.js"></script>
-    <script>
-        const plt = new Platformer('kaka');
-        plt.info();
-    </script>
+    <script src="./platformer-2d.js"></script>
+    <script src="./game-config.js"></script>
+    <script src="./script.js"></script>
 </body>
 </html>
