feat: Folder structure update

--- a/sandbox/index.html
+++ b/sandbox/index.html
@@ -16,8 +16,6 @@
         Your browser doesn't support canvas.
     </canvas>
 
-    <script src="dist/platformer-2d.js"></script>
-    <script src="game-config.js"></script>
-    <script src="script.js"></script>
+    <script src="index.js"></script>
 </body>
 </html>
